--- a/configs/nfc/libnfc-nxp.conf
+++ b/configs/nfc/libnfc-nxp.conf
@@ -1,5 +1,6 @@
-## This file is used by NFC NXP NCI HAL(external/libnfc-nci/halimpl/pn547)
-## and NFC Service Java Native Interface Extensions (packages/apps/Nfc/nci/jni/extns/pn547)
+#DEVICE_MANUFACTURER=NXP
+#DEVICE_MODEL=PN553
+
 ###############################################################################
 # Application options
 # Logging Levels
@@ -8,12 +9,28 @@
 # ANDROID_LOG_WARN           0x02
 # ANDROID_LOG_ERROR          0x01
 # ANDROID_LOG_SILENT         0x00
+#
+#start: BBRY_ANDROID
+#NXPLOG_EXTNS_LOGLEVEL=0x03
+#NXPLOG_NCIHAL_LOGLEVEL=0x03
+#NXPLOG_NCIX_LOGLEVEL=0x03
+#NXPLOG_NCIR_LOGLEVEL=0x03
+#NXPLOG_FWDNLD_LOGLEVEL=0x03
+#NXPLOG_TML_LOGLEVEL=0x03
 NXPLOG_EXTNS_LOGLEVEL=0x03
 NXPLOG_NCIHAL_LOGLEVEL=0x03
 NXPLOG_NCIX_LOGLEVEL=0x03
 NXPLOG_NCIR_LOGLEVEL=0x03
 NXPLOG_FWDNLD_LOGLEVEL=0x03
 NXPLOG_TML_LOGLEVEL=0x03
+#Verbose logging is more... verbose
+VERBOSE_NXPLOG_EXTNS_LOGLEVEL=0x03
+VERBOSE_NXPLOG_NCIHAL_LOGLEVEL=0x03
+VERBOSE_NXPLOG_NCIX_LOGLEVEL=0x03
+VERBOSE_NXPLOG_NCIR_LOGLEVEL=0x03
+VERBOSE_NXPLOG_FWDNLD_LOGLEVEL=0x03
+VERBOSE_NXPLOG_TML_LOGLEVEL=0x01
+#end: BBRY_ANDROID
 
 ###############################################################################
 # Nfc Device Node name
@@ -21,19 +38,19 @@ NXP_NFC_DEV_NODE="/dev/nq-nci"
 
 ###############################################################################
 # Extension for Mifare reader enable
+# Disable   = 0x00
+# Enable    = 0x01
 MIFARE_READER_ENABLE=0x01
 
 ###############################################################################
 # Vzw Feature enable
-#    Disabled - 0x00
-#    Enabled  - 0x01
-VZW_FEATURE_ENABLE=0x00
+# Disable   = 0x00
+# Enable    = 0x01
+VZW_FEATURE_ENABLE=0x01
 
 ###############################################################################
-# Firmware file type
-#.so file   0x01
-#.bin file  0x02
-NXP_FW_TYPE=0x01
+# File name for Firmware
+NXP_FW_NAME="libpn553_fw.so"
 
 ###############################################################################
 # System clock source selection configuration
@@ -54,8 +71,8 @@ NXP_SYS_CLK_FREQ_SEL=0x02
 
 ###############################################################################
 # The timeout value to be used for clock request acknowledgment
-# min value = 0x01 to max = 0x06
-NXP_SYS_CLOCK_TO_CFG=0x06
+# min value = 0x01 (1.33 ms) to max = 0x06 (2.98 ms)
+NXP_SYS_CLOCK_TO_CFG=0x01
 
 ###############################################################################
 # NXP proprietary settings
@@ -73,15 +90,19 @@ NXP_NFC_MERGE_RF_PARAMS={20, 02, 04, 01, 85, 01, 01}
 
 ###############################################################################
 # Standby enable settings
-#    Disabled - 0x00
-#    Enabled  - 0x01
+# Disable   = 0x00
+# Enable    = 0x01
 NXP_CORE_STANDBY={2F, 00, 01, 01}
 
 ###############################################################################
 # NXP TVDD configurations settings
 # Allow NFCC to configure External TVDD, two configurations (1 and 2) supported,
 # out of them only one can be configured at a time.
-NXP_EXT_TVDD_CFG=0x02
+#supported(hardware dependancy).
+#       Config 1: VUP connected to VBAT
+#       Config 2: VUP connected to external 5V
+#
+NXP_EXT_TVDD_CFG=0x01
 
 ###############################################################################
 #config1:SLALM, 3.3V for both RM and CM
@@ -94,56 +115,55 @@ NXP_EXT_TVDD_CFG_2={20, 02, 0F, 01, A0, 0E, 0B, 11, 01, C2, B2, 00, B2, 1E, 12, 
 
 ###############################################################################
 NXP_RF_CONF_BLK_1={
-	20, 02, E7, 1B,
-	A0, 0D, 06, 06, 37, 28, 76, 00, 00,
-	A0, 0D, 03, 24, 03, 7E,
-	A0, 0D, 06, 02, 35, 00, 3E, 00, 00, 
-	A0, 0D, 06, 04, 35, F4, 05, 70, 02, 
-	A0, 0D, 06, C2, 35, 00, 3E, 00, 03,
-  	A0, 0D, 06, 04, 42, F8, 40, FF, FF, 
-  	A0, 0D, 04, 32, 42, F8, 40,
-  	A0, 0D, 04, 46, 42, 68, 40,
-  	A0, 0D, 04, 56, 42, 78, 40,
-  	A0, 0D, 04, 5C, 42, 80, 40,
-  	A0, 0D, 04, CA, 42, 68, 40,
-  	A0, 0D, 06, 06, 42, 00, 03, F4, F4,
-  	A0, 0D, 06, 32, 4A, 53, 07, 00, 1B, 
-  	A0, 0D, 06, 46, 4A, 33, 07, 00, 07,
-  	A0, 0D, 06, 56, 4A, 43, 07, 00, 07,
-  	A0, 0D, 06, 5C, 4A, 11, 07, 01, 07,
-  	A0, 0D, 06, 34, 44, 66, 0A, 00, 00, 
-  	A0, 0D, 06, 48, 44, 65, 0A, 00, 00,
-  	A0, 0D, 06, 58, 44, 55, 08, 00, 00,
-  	A0, 0D, 06, 5E, 44, 55, 08, 00, 00,
-  	A0, 0D, 06, CA, 44, 65, 0A, 00, 00,
-  	A0, 0D, 06, 06, 44, 04, 04, C4, 00,
-  	A0, 0D, 06, 34, 2D, DC, 20, 04, 00,
-	A0, 0D, 06, 48, 2D, 15, 34, 1F, 01, 
-	A0, 0D, 06, 58, 2D, 0D, 48, 0C, 01, 
-	A0, 0D, 06, 5E, 2D, 0D, 5A, 0C, 01, 
-	A0, 0D, 06, CA, 2D, 15, 34, 1F, 01
+  20, 02, E7, 1B,
+  A0, 0D, 06, 06, 37, 28, 76, 00, 00,
+  A0, 0D, 03, 24, 03, 7E,
+  A0, 0D, 06, 02, 35, 00, 3E, 00, 00, 
+  A0, 0D, 06, 04, 35, F4, 05, 70, 02, 
+  A0, 0D, 06, C2, 35, 00, 3E, 00, 03,
+    A0, 0D, 06, 04, 42, F8, 40, FF, FF, 
+    A0, 0D, 04, 32, 42, F8, 40,
+    A0, 0D, 04, 46, 42, 68, 40,
+    A0, 0D, 04, 56, 42, 78, 40,
+    A0, 0D, 04, 5C, 42, 80, 40,
+    A0, 0D, 04, CA, 42, 68, 40,
+    A0, 0D, 06, 06, 42, 00, 03, F4, F4,
+    A0, 0D, 06, 32, 4A, 53, 07, 00, 1B, 
+    A0, 0D, 06, 46, 4A, 33, 07, 00, 07,
+    A0, 0D, 06, 56, 4A, 43, 07, 00, 07,
+    A0, 0D, 06, 5C, 4A, 11, 07, 01, 07,
+    A0, 0D, 06, 34, 44, 66, 0A, 00, 00, 
+    A0, 0D, 06, 48, 44, 65, 0A, 00, 00,
+    A0, 0D, 06, 58, 44, 55, 08, 00, 00,
+    A0, 0D, 06, 5E, 44, 55, 08, 00, 00,
+    A0, 0D, 06, CA, 44, 65, 0A, 00, 00,
+    A0, 0D, 06, 06, 44, 04, 04, C4, 00,
+    A0, 0D, 06, 34, 2D, DC, 20, 04, 00,
+  A0, 0D, 06, 48, 2D, 15, 34, 1F, 01, 
+  A0, 0D, 06, 58, 2D, 0D, 48, 0C, 01, 
+  A0, 0D, 06, 5E, 2D, 0D, 5A, 0C, 01, 
+  A0, 0D, 06, CA, 2D, 15, 34, 1F, 01
 }
 
 
 
 NXP_RF_CONF_BLK_2={
-	20, 02, D6, 01, 
-	A0, 34, D2, 23, 04, 18, 07, 40, 00, 20, 40, 00, BE, 23, 60, 00, 2B, 13, 40, 00, B8, 21, 60, 00, 38, 35, 00, 00, 18, 46, 08, 00, DE, 54, 08, 02, 00, 00, 08, 02, 00, 00, 08, 02, 00, 00, 08, 02, 00, 00, 08, 02, 00, 00, 08, 02, 00, 00, 08, 02, 00, 00, 48, 01, 00, 00, 08, 03, 00, 00, 08, 01, 00, 00, C8, 02, 00, 00, C8, 00, 00, 00, 88, 02, 00, 00, 48, 02, 00, 00, B8, 00, 00, 00, 68, 00, 00, 00, 18, 00, 00, 00, 08, 02, 00, 00, 00, 00, 00, 00, 00, 00, 07, 00, 20, 40, 00, BE, 23, 60, 00, 2B, 13, 40, 00, B8, 21, 60, 00, 38, 35, 00, 00, 18, 46, 08, 00, DE, 54, 08, 02, 00, 00, 08, 02, 00, 00, 08, 02, 00, 00, 08, 02, 00, 00, 08, 02, 00, 00, 08, 02, 00, 00, 08, 02, 00, 00, 48, 01, 00, 00, 08, 03, 00, 00, 08, 01, 00, 00, C8, 02, 00, 00, C8, 00, 00, 00, 88, 02, 00, 00, 48, 02, 00, 00, B8, 00, 00, 00, 68, 00, 00, 00, 18, 00, 00, 00, 08, 02, 00, 00, 00, 00
+  20, 02, D6, 01, 
+  A0, 34, D2, 23, 04, 18, 07, 40, 00, 20, 40, 00, BE, 23, 60, 00, 2B, 13, 40, 00, B8, 21, 60, 00, 38, 35, 00, 00, 18, 46, 08, 00, DE, 54, 08, 02, 00, 00, 08, 02, 00, 00, 08, 02, 00, 00, 08, 02, 00, 00, 08, 02, 00, 00, 08, 02, 00, 00, 08, 02, 00, 00, 48, 01, 00, 00, 08, 03, 00, 00, 08, 01, 00, 00, C8, 02, 00, 00, C8, 00, 00, 00, 88, 02, 00, 00, 48, 02, 00, 00, B8, 00, 00, 00, 68, 00, 00, 00, 18, 00, 00, 00, 08, 02, 00, 00, 00, 00, 00, 00, 00, 00, 07, 00, 20, 40, 00, BE, 23, 60, 00, 2B, 13, 40, 00, B8, 21, 60, 00, 38, 35, 00, 00, 18, 46, 08, 00, DE, 54, 08, 02, 00, 00, 08, 02, 00, 00, 08, 02, 00, 00, 08, 02, 00, 00, 08, 02, 00, 00, 08, 02, 00, 00, 08, 02, 00, 00, 48, 01, 00, 00, 08, 03, 00, 00, 08, 01, 00, 00, C8, 02, 00, 00, C8, 00, 00, 00, 88, 02, 00, 00, 48, 02, 00, 00, B8, 00, 00, 00, 68, 00, 00, 00, 18, 00, 00, 00, 08, 02, 00, 00, 00, 00
 }
 
 
 NXP_RF_CONF_BLK_3={
-	20, 02, 5B, 01,
-	A0, 0B, 57, 11, 11, 90, 78, 0F, 4E, 00, 3D, 95, 00, 00, 3D, 9F, 00, 00, 50, 9F, 00, 00, 59, 9F, 00, 00, 5A, 9F, 00, 00, 64, 9F, 00, 00, 65, 9F, 00, 00, 6E, 9F, 00, 00, 72, 9F, 00, 00, 79, 9F, 00, 00, 7B, 9F, 00, 00, 84, 9F, 00, 00, 86, 9F, 00, 00, 8F, 9F, 00, 00, 91, 9F, 00, 00, 9A, 9F, 00, 00, A1, 9F, 00, 00, A7, 9F, 00, 00, B0, 1F, 00, 00, B9, 1F, 00, 00
+  20, 02, 5B, 01,
+  A0, 0B, 57, 11, 11, 90, 78, 0F, 4E, 00, 3D, 95, 00, 00, 3D, 9F, 00, 00, 50, 9F, 00, 00, 59, 9F, 00, 00, 5A, 9F, 00, 00, 64, 9F, 00, 00, 65, 9F, 00, 00, 6E, 9F, 00, 00, 72, 9F, 00, 00, 79, 9F, 00, 00, 7B, 9F, 00, 00, 84, 9F, 00, 00, 86, 9F, 00, 00, 8F, 9F, 00, 00, 91, 9F, 00, 00, 9A, 9F, 00, 00, A1, 9F, 00, 00, A7, 9F, 00, 00, B0, 1F, 00, 00, B9, 1F, 00, 00
 }
 
 ###############################################################################
 # Set configuration optimization decision setting
-# Enable    = 0x01
-# Disable   = 0x00
-NXP_SET_CONFIG_ALWAYS=0x01
-
-
+# Disable   = 0x00  for MP version
+# Enable    = 0x01  for RF debug
+# Modify from 0x00 to 0x01 by TCTNB.Ji.Chen
+NXP_SET_CONFIG_ALWAYS=0x00
 
 ###############################################################################
 # Core configuration extensions
@@ -211,6 +231,8 @@ NXP_CORE_CONF={ 20, 02, 2E, 0E,
 ###############################################################################
 # To enable i2c fragmentation set i2c fragmentation enable 0x01 to disable set
 # to 0x00
+# Disable   = 0x00
+# Enable    = 0x01
 NXP_I2C_FRAGMENTATION_ENABLED=0x00
 
 ###############################################################################
@@ -220,18 +242,19 @@ NXP_I2C_FRAGMENTATION_ENABLED=0x00
 #                                     A0, 53, 06, FF, FF, FF, FF, FF, FF,
 #                                     A0, 54, 06, 00, 00, 00, 00, 00, 00}
 
-
 ###############################################################################
 # Default SE Options
 # No secure element 0x00
 # eSE               0x01
 # UICC              0x02
 # UICC2             0x04
-
 NXP_DEFAULT_SE=0x02
+
 
 ###############################################################################
 #Enable SWP full power mode when phone is power off
+# Disable   = 0x00
+# Enable    = 0x01
 NXP_SWP_FULL_PWR_ON=0x00
 
 ###############################################################################
@@ -262,6 +285,7 @@ NXP_DEFAULT_NFCEE_DISC_TIMEOUT=20
 NXP_DEFAULT_NFCEE_TIMEOUT=20
 
 ###############################################################################
+# SWP Reader feature
 #Timeout in secs
 NXP_SWP_RD_START_TIMEOUT=0x0A
 
@@ -279,22 +303,42 @@ NXP_SWP_RD_TAG_OP_TIMEOUT=0x01
 DEFAULT_AID_ROUTE=0x02
 
 ###############################################################################
-#Set the Mifare Desfire route Location :
-#This settings will be used when application does not set this parameter
+# Configure the default NfcA/IsoDep techology and protocol route. Can be
+# either a secure element (e.g. 0xF4) or the host (0x00)
+# (= ï¿½ï¿½DEFAULT_DESFIRE_ROUTE on MW8.xï¿½ï¿½) 
 # host  0x00
 # eSE   0x01
 # UICC  0x02
-# UICC2 0x03
-DEFAULT_DESFIRE_ROUTE=0x02
+DEFAULT_ROUTE=0x02
 
 ###############################################################################
-#Set the Mifare CLT route Location :
-#This settings will be used when application does not set this parameter
+# Configure the single default SE to use.  The default is to use the first
+# SE that is detected by the stack.  This value might be used when the phone
+# supports multiple SE (e.g. 0xC0 and 0x80) but you want to force it to use
+# one of them (e.g. 0xC0).
+# (= ï¿½ï¿½DEFAULT_MIFARE_CLT_ROUTE on MW8.xï¿½ï¿½) 
 # host  0x00
 # eSE   0x01
 # UICC  0x02
-# UICC2 0x03
-DEFAULT_MIFARE_CLT_ROUTE=0x02
+DEFAULT_OFFHOST_ROUTE=0x02
+
+###############################################################################
+# Configure the single default SE to use.  The default is to use the first
+# SE that is detected by the stack.  This value might be used when the phone
+# supports multiple SE (e.g. 0xF3 and 0xF4) but you want to force it to use
+# one of them (e.g. 0xF4).
+# (= ï¿½ï¿½DEFAULT_FELICA_CLT_ROUTE on MW8.xï¿½ï¿½) 
+# host  0x00
+# eSE   0x01
+# UICC  0x02
+DEFAULT_NFCF_ROUTE=0x02
+
+###############################################################################
+#Set the default Felica T3T System Code OffHost route Location :
+#This settings will be used when application does not set this parameter
+# host  0x00
+# eSE   0xC0
+DEFAULT_SYS_CODE_ROUTE=0xC0
 
 ###############################################################################
 #Set the default AID Power state :
@@ -314,7 +358,7 @@ DEFAULT_AID_PWR_STATE=0x1B
 # bit pos 2 = Battery Off
 # bit pos 3 = Screen Lock
 # bit pos 4 = Screen Off
-DEFAULT_DESFIRE_PWR_STATE=0x1B
+DEFAULT_ROUTE_PWR_STATE=0x1B
 
 ###############################################################################
 #Set the Mifare CLT Power state :
@@ -324,15 +368,7 @@ DEFAULT_DESFIRE_PWR_STATE=0x1B
 # bit pos 2 = Battery Off
 # bit pos 3 = Screen Lock
 # bit pos 4 = Screen Off
-DEFAULT_MIFARE_CLT_PWR_STATE=0x1B
-
-###############################################################################
-#Set the Felica CLT route Location :
-#This settings will be used when application does not set this parameter
-# eSE  0x01
-# UICC 0x02
-# UICC2 0x03
-DEFAULT_FELICA_CLT_ROUTE=0x02
+DEFAULT_OFFHOST_PWR_STATE=0x1B
 
 ###############################################################################
 #Set the Felica CLT Power state :
@@ -342,7 +378,20 @@ DEFAULT_FELICA_CLT_ROUTE=0x02
 # bit pos 2 = Battery Off
 # bit pos 3 = Screen Lock
 # bit pos 4 = Screen Off
-DEFAULT_FELICA_CLT_PWR_STATE=0x1B
+DEFAULT_SYS_CODE_PWR_STATE=0x1B
+
+###############################################################################
+# Configure the NFC Extras to open and use a static pipe.  If the value is
+# not set or set to 0, then the default is use a dynamic pipe based on a
+# destination gate (see NFA_HCI_DEFAULT_DEST_GATE).  Note there is a value
+# for each UICC (where F3="UICC0" and F4="UICC1")
+OFF_HOST_ESE_PIPE_ID=0x19
+OFF_HOST_SIM_PIPE_ID=0x0A
+
+###############################################################################
+# Bail out mode
+#  If set to 1, NFCC is using bail out mode for either Type A or Type B poll.
+NFA_POLL_BAIL_OUT_MODE=0x01
 
 ###############################################################################
 # AID Matching platform options
@@ -457,13 +506,67 @@ NXP_CHECK_DEFAULT_PROTO_SE_ID=0x01
 NXP_CN_TRANSIT_BLK_NUM_CHECK_ENABLE=0x01
 
 ###############################################################################
-# Restrict routing to first matched rule only.
-# Blacklist enable   0x01
-# Blacklist disable  0x00
-NXP_PROP_BLACKLIST_ROUTING=0x00
+#Enable NXP NCI runtime parser library
+#Enable 0x01
+#Disable 0x00
+NXP_NCI_PARSER_LIBRARY=0x00
+
+###############################################################################
+#This config will enable different level of Rf transaction debugs based on the
+#following values provided. Decoded information will be printed in adb logcat
+#Debug Mode         Levels
+#Disable Debug      0x00
+#L1 Debug           0x01
+#L2 Debug           0x02
+#L1 & L2 Debug      0x03
+#L1 & L2 & RSSI     0x04
+#L1 & L2 & Felica   0x05
+#NXP_CORE_PROP_SYSTEM_DEBUG=0x00
+
+###############################################################################
+# Enable/Disable Block Route feature.
+# Block Route will restrict routing to first matched rule
+# Block Route enable   0x01
+# Block Route disable  0x00
+AID_BLOCK_ROUTE=0x00
+
+###############################################################################
+# Enable or Disable RF_STATUS_UPDATE to EseHal module
+# Disable           0x00
+# Enable            0x01
+RF_STATUS_UPDATE_ENABLE=0x00
 
 ###############################################################################
 # Timeout value in milliseconds to send response for Felica command received
 NXP_HCEF_CMD_RSP_TIMEOUT_VALUE=5000
+###############################################################################
+# Vendor Specific Proprietary Protocol & Discovery Configuration
+# Set to 0xFF if unsupported
+#  byte[0] NCI_PROTOCOL_18092_ACTIVE
+#  byte[1] NCI_PROTOCOL_B_PRIME
+#  byte[2] NCI_PROTOCOL_DUAL
+#  byte[3] NCI_PROTOCOL_15693
+#  byte[4] NCI_PROTOCOL_KOVIO
+#  byte[5] NCI_PROTOCOL_MIFARE
+#  byte[6] NCI_DISCOVERY_TYPE_POLL_KOVIO
+#  byte[7] NCI_DISCOVERY_TYPE_POLL_B_PRIME
+#  byte[8] NCI_DISCOVERY_TYPE_LISTEN_B_PRIME
+NFA_PROPRIETARY_CFG={05, FF, FF, 06, 81, 80, 70, FF, FF}
+
+###############################################################################
+#White list of Hosts
+#This values will be the Hosts(NFCEEs) in the HCI Network.
+DEVICE_HOST_WHITE_LIST={C0, 02}
+
+###############################################################################
+# Choose the presence-check algorithm for type-4 tag.  If not defined, the default value is 1.
+# 0  NFA_RW_PRES_CHK_DEFAULT; Let stack selects an algorithm
+# 1  NFA_RW_PRES_CHK_I_BLOCK; ISO-DEP protocol's empty I-block
+# 2 NFA_RW_PRES_CHK_ISO_DEP_NAK; Type - 4 tag protocol iso-dep nak presence check
+PRESENCE_CHECK_ALGORITHM=2
+
+###############################################################################
+# Extended APDU length for ISO_DEP
+ISO_DEP_MAX_TRANSCEIVE=0xFEFF
 
 ###############################################################################
