--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -288,19 +288,19 @@ service vendor.cdsprpcd /vendor/bin/cdsprpcd
 #
 #
 ## imsdatadaemon starts with root and UID will be downgraded to SYSTEM.
-service vendor.imsqmidaemon /system/vendor/bin/imsqmidaemon
-    class main
-    user system
-    socket ims_qmid stream 0660 system radio
-    group radio log diag
-
+#service vendor.imsqmidaemon /system/vendor/bin/imsqmidaemon
+#    class main
+#    user system
+#    socket ims_qmid stream 0660 system radio
+#    group radio log diag
+#
 # imsdatadaemon starts with root and UID will be downgraded to SYSTEM.
-service vendor.imsdatadaemon /system/vendor/bin/imsdatadaemon
-    class main
-    user system
-    socket ims_datad stream 0660 system radio
-    group system wifi radio inet log diag
-    disabled
+#service vendor.imsdatadaemon /system/vendor/bin/imsdatadaemon
+#    class main
+#    user system
+#    socket ims_datad stream 0660 system radio
+#    group system wifi radio inet log diag
+#    disabled
 #
 #service mdm_helper /system/bin/mdm_helper
 #    class core
@@ -370,8 +370,8 @@ service vendor.pd_mapper /system/vendor/bin/pd-mapper
 #   group gps system qcom_diag diag log inet net_raw
 #   disabled
 
-on property:vendor.ims.QMI_DAEMON_STATUS=1
-    start vendor.imsdatadaemon
+#on property:vendor.ims.QMI_DAEMON_STATUS=1
+#    start vendor.imsdatadaemon
 
 #service cnss_diag /system/vendor/bin/cnss_diag -q -f -t HELIUM
 #   class main
@@ -379,18 +379,18 @@ on property:vendor.ims.QMI_DAEMON_STATUS=1
 #   group system wifi inet sdcard_rw media_rw diag
 #   oneshot
 
-service vendor.ims_rtp_daemon /system/vendor/bin/ims_rtp_daemon
-   class main
-   user system
-   group radio diag inet log
-
-service vendor.imsrcsservice /system/vendor/bin/imsrcsd
-   class main
-   user system
-   group radio diag inet log wakelock
-
-on property:vendor.ims.DATA_DAEMON_STATUS=1
-    restart vendor.ims_rtp_daemon
+#service vendor.ims_rtp_daemon /system/vendor/bin/ims_rtp_daemon
+#   class main
+#   user system
+#   group radio diag inet log
+#
+#service vendor.imsrcsservice /system/vendor/bin/imsrcsd
+#   class main
+#   user system
+#   group radio diag inet log wakelock
+#
+#on property:vendor.ims.DATA_DAEMON_STATUS=1
+#    restart vendor.ims_rtp_daemon
 
 
 service ppd /system/vendor/bin/mm-pp-dpps
